--- a/.htaccess
+++ b/.htaccess
@@ -2,11 +2,13 @@
 # BEGIN
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /~luxurioust/laravel/public/
+RewriteBase /
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /~luxurioust/laravel/public/index.php [L]
+RewriteRule . /index.php [L]
+RewriteCond %{HTTP_HOST} ^(timefragment\.com)(:80)? [NC]
+RewriteRule ^(.*)$ http://www.timefragment.com/$1 [L,R=301]
 </IfModule>
 
-# END WordPress
+# END 
