--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,12 @@
 
 # BEGIN
 <IfModule mod_rewrite.c>
-RewriteEngine On
-RewriteBase /
-RewriteRule ^index\.php$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+RewriteEngine on
 RewriteCond %{HTTP_HOST} ^(timefragment\.com)(:80)? [NC]
 RewriteRule ^(.*)$ http://www.timefragment.com/$1 [L,R=301]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.*)$ index.php/$1 [QSA,PT,L]
 </IfModule>
 
 # END 
