--- a/public/.htaccess
+++ b/public/.htaccess
@@ -7,6 +7,8 @@ RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
+RewriteCond %{HTTP_HOST} ^(timefragment\.com)(:80)? [NC]
+RewriteRule ^(.*)$ http://www.timefragment.com/$1 [L,R=301]
 </IfModule>
 
 # END
