--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,10 @@ language: php
 php:
   - 5.4
   - 5.5
-  - hhvm
-
-matrix:
-  allow_failures:
-    - php: hhvm
-
-branches:
-  except:
-    - gh-pages
+  - 5.6
 
 before_script:
-  - "mysql -e 'create database `timefragment`;'"
-  - composer install -n --prefer-source
-  - php artisan migrate --seed -n
-  - ./vendor/bin/codecept build
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
 
-script:
-  - ./vendor/bin/codecept run
+script: phpunit
