--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,13 @@ language: php
 php:
   - 5.5
 
+install:
+  - travis_retry composer install --no-interaction --prefer-source
+
 before_script:
   - "mysql -e 'create database `timefragment`;'"
   - composer install -n --prefer-source
   - php artisan migrate -n
-  - composer self-update
-  - composer install
   - php artisan dump-autoload
 
 script: phpunit ./app/tests/ExampleTest.php
