--- a/composer.json
+++ b/composer.json
@@ -1,55 +1,47 @@
 {
-	"name": "laravel/laravel",
-	"description": "Time Fragment",
-	"keywords": ["framework", "laravel"],
-	"license": "MIT",
-	"require": {
-		"laravel/framework"          : "4.2.*",
-		"yzalis/identicon"           : "1.0.*@dev",
-		"intervention/image"         : "dev-master",
-		"michelf/php-markdown"       : "1.4.*@dev",
-		"nickcernis/html-to-markdown": "dev-master",
-		"symfony/validator"          : "2.6.*@dev",
-		"symfony/expression-language": "2.6.*@dev",
-		"jenssegers/agent"           : "*",
-		"pda/pheanstalk"             : "2.0.",
-		"cboden/ratchet"             : "0.3.*",
-		"brainboxlabs/brain-socket"  : "dev-master",
-		"ceesvanegmond/minify" 		 : "2.0.*",
-		"phpunit/phpunit"			 : "*"
-	},
-	"autoload": {
-		"classmap": [
-			"app/commands",
-			"app/controllers",
-			"app/models",
-			"app/database/migrations",
-			"app/database/seeds",
-			"app/tests/TestCase.php"
-		],
-		"psr-0": {
-			"Formativ\\Chat": "workbench/formativ/chat/src/"
-		}
-	},
-	"scripts": {
-		"post-install-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
-		],
-		"post-update-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
-		],
-		"post-create-project-cmd": [
-			"php artisan key:generate"
-		]
-	},
-	"config": {
-		"preferred-install": "dist"
-	},
-	"minimum-stability": "stable",
-	"repositories": [
-			{"type": "composer", "url": "http://pkg.phpcomposer.com/repo/packagist/"},
-			{"packagist": false}
-		]
+    "name": "laravel/laravel",
+    "description": "Time Fragment",
+    "keywords": ["framework", "laravel"],
+    "license": "MIT",
+    "require": {
+        "laravel/framework"          : "4.2.*",
+        "yzalis/identicon"           : "1.0.*@dev",
+        "intervention/image"         : "dev-master",
+        "jenssegers/agent"           : "*",
+        "pda/pheanstalk"             : "2.0.*",
+        "cboden/ratchet"             : "0.3.*",
+        "brainboxlabs/brain-socket"  : "dev-master",
+        "ceesvanegmond/minify"       : "2.0.*"
+    },
+    "autoload": {
+        "classmap": [
+            "app/commands",
+            "app/controllers",
+            "app/models",
+            "app/database/migrations",
+            "app/database/seeds",
+            "app/tests/TestCase.php"
+        ],
+        "psr-0": {
+            "Formativ\\Chat": "workbench/formativ/chat/src/"
+        }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "php artisan clear-compiled",
+            "php artisan optimize"
+        ],
+        "post-update-cmd": [
+            "php artisan clear-compiled",
+            "php artisan optimize"
+        ],
+        "post-create-project-cmd": [
+            "php artisan key:generate"
+        ]
+    },
+    "config": {
+        "preferred-install": "dist"
+    },
+    "minimum-stability": "stable"
+
 }
