--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "pda/pheanstalk"             : "2.0.*",
         "cboden/ratchet"             : "0.3.*",
         "brainboxlabs/brain-socket"  : "dev-master",
-        "ceesvanegmond/minify"       : "2.0.*"
+        "ceesvanegmond/minify"       : "2.0.*",
+        "guzzle/guzzle"              : "*"
     },
     "autoload": {
         "classmap": [
