--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -22,5 +22,5 @@ build:
             -
                 command: 'phpunit --coverage-clover build/logs/clover.xml'
                 coverage:
-                    file: 'clover.xml'
+                    file: 'logs/clover.xml'
                     format: 'php-clover'
