--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -14,8 +14,8 @@ checks:
         duplicate_code: true
 
 tools:
-    external_code_coverage: true
-        timeout: 600    # Timeout in seconds.
+    external_code_coverage:
+        timeout: 600
 
 build:
     tests:
