Repo URI changed.

--- a/workbench/formativ/chat/composer.json
+++ b/workbench/formativ/chat/composer.json
@@ -3,7 +3,7 @@
     "description": "",
     "authors": [
         {
-            "name": "luxurioust"
+            "name": "xuri"
 	}
     ],
     "require": {
